Editing the recurring event freezes Calendar.
Affected version
- Fedora 37 RC
- Gnome Calendar 43 (gnome-calendar-43.0-6.fc37.x86_64)
Bug summary
When a recurring event that spread weekly until a certain date in the future, i.e. for several weeks, is added, it cannot be edited or deleted any more. Any attempt to open the event freezes the application and a Force Quit dialogue appears and eventually must be used to quit the application. See the bottom for journal logs.
Steps to reproduce
- Open Calendar.
- Click to add an event and add a single event.
- Edit that event to make it repeat weekly until some date in the future and confirm it.
- Try to edit or delete the event by clicking on it and then clicking the Edit button.
- Application freezes.
What happened
Application stops responding in certain scenarios.
What did you expect to happen
Calendar should open the event for editing or deletion.
Relevant logs, screenshots, screencasts etc.
Oct 18 12:09:57 fedora gnome-calendar[2329]: g_date_time_get_ymd: assertion 'datetime != NULL' failed
Oct 18 12:09:57 fedora kernel: gnome-calendar[2329]: segfault at 18 ip 00007ff845e8c7b4 sp 00007ffe0b277e28 error 4 in libglib-2.0.so.0.7400.0[7ff845e2a000+92000]
Oct 18 12:09:57 fedora kernel: Code: 0a 6c 04 00 ba 32 03 00 00 48 8d 35 9f 05 04 00 48 8d 3d 08 f9 02 00 e8 6a fe ff ff 66 2e 0f 1f 84 00 00 00 00 00 f3 0f 1e fa <8b> 47 18 85 c0 7e 0d 48 89 f8 f0 83 47 18 01 c3 0f 1f 40 00 48 83
Oct 18 12:09:57 fedora audit[2329]: ANOM_ABEND auid=1000 uid=1000 gid=1000 ses=3 subj=unconfined_u:unconfined_r:unconfined_t:s0-s0:c0.c1023 pid=2329 comm="gnome-calendar" exe="/usr/bin/gnome-calendar" sig=11 res=1
Oct 18 12:09:57 fedora gnome-calendar[2329]: g_date_time_get_day_of_month: assertion 'datetime != NULL' failed
Oct 18 12:09:57 fedora gnome-calendar[2329]: g_date_time_get_ymd: assertion 'datetime != NULL' failed
Oct 18 12:09:57 fedora gnome-calendar[2329]: g_date_time_get_ymd: assertion 'datetime != NULL' failed
Oct 18 12:09:57 fedora gnome-calendar[2329]: g_date_time_get_day_of_month: assertion 'datetime != NULL' failed
Oct 18 12:09:57 fedora gnome-calendar[2329]: g_date_time_get_ymd: assertion 'datetime != NULL' failed
Oct 18 12:09:57 fedora gnome-calendar[2329]: g_date_time_get_ymd: assertion 'datetime != NULL' failed
Oct 18 12:09:57 fedora gnome-calendar[2329]: g_date_time_get_timezone: assertion 'datetime != NULL' failed
Oct 18 12:09:57 fedora audit: BPF prog-id=97 op=LOAD
Oct 18 12:09:57 fedora audit: BPF prog-id=98 op=LOAD
Oct 18 12:09:57 fedora audit: BPF prog-id=99 op=LOAD
Oct 18 12:09:57 fedora systemd[1]: Started systemd-coredump@1-2606-0.service - Process Core Dump (PID 2606/UID 0).
Oct 18 12:09:57 fedora audit[1]: SERVICE_START pid=1 uid=0 auid=4294967295 ses=4294967295 subj=system_u:system_r:init_t:s0 msg='unit=systemd-coredump@1-2606-0 comm="systemd" exe="/usr/lib/systemd/systemd" hostname=? addr=? terminal=? res=success'
Oct 18 12:10:22 fedora systemd[1]: systemd-hostnamed.service: Deactivated successfully.
Oct 18 12:10:22 fedora audit[1]: SERVICE_STOP pid=1 uid=0 auid=4294967295 ses=4294967295 subj=system_u:system_r:init_t:s0 msg='unit=systemd-hostnamed comm="systemd" exe="/usr/lib/systemd/systemd" hostname=? addr=? terminal=? res=success'
Oct 18 12:10:22 fedora audit: BPF prog-id=0 op=UNLOAD
Oct 18 12:10:22 fedora audit: BPF prog-id=0 op=UNLOAD
Oct 18 12:10:22 fedora audit: BPF prog-id=0 op=UNLOAD
Oct 18 12:10:52 fedora systemd[1372]: dbus-:1.1-org.gnome.Calendar@1.service: Main process exited, code=killed, status=9/KILL
Oct 18 12:10:52 fedora systemd[1372]: dbus-:1.1-org.gnome.Calendar@1.service: Failed with result 'signal'.